[gd_scene load_steps=5 format=3 uid="uid://uwmkqclvyefi"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_aqfdd"]
[ext_resource type="Script" path="res://scripts/defautl_view.gd" id="3_5afj5"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="3_h77hq"]

[sub_resource type="LabelSettings" id="LabelSettings_0psi5"]

[node name="HUD" type="Node2D"]
script = ExtResource("1_aqfdd")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="MainMenu"]
offset_right = 1151.0
offset_bottom = 647.0
script = ExtResource("3_h77hq")

[node name="Label2" type="Label" parent="MainMenu/Panel"]
layout_mode = 2
offset_left = 667.0
offset_top = 18.0
offset_right = 1065.0
offset_bottom = 41.0
text = "Descripcion del nivel seleccinado"

[node name="Button" type="Button" parent="MainMenu/Panel"]
layout_mode = 2
offset_left = 84.0
offset_top = 570.0
offset_right = 338.0
offset_bottom = 601.0
text = "Salir"

[node name="SaveData" type="Button" parent="MainMenu/Panel"]
layout_mode = 0
offset_left = 363.0
offset_top = 567.0
offset_right = 503.0
offset_bottom = 598.0
text = "Guardar"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Panel"]
layout_mode = 0
offset_left = 118.0
offset_top = 36.0
offset_right = 296.0
offset_bottom = 71.0

[node name="Label" type="Label" parent="MainMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Selecciona un nivel"

[node name="DefautlView" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_5afj5")

[node name="HUD" type="CanvasLayer" parent="DefautlView"]

[node name="SpeedLabel" type="Label" parent="DefautlView/HUD"]
offset_top = 6.0
offset_right = 93.0
offset_bottom = 29.0
text = "Velocidad: 0"
label_settings = SubResource("LabelSettings_0psi5")

[node name="Position" type="Label" parent="DefautlView/HUD"]
offset_left = 2.0
offset_top = 30.0
offset_right = 52.0
offset_bottom = 53.0
text = "X:    Y :"

[node name="Health" type="Label" parent="DefautlView/HUD"]
offset_left = 1.0
offset_top = 58.0
offset_right = 53.0
offset_bottom = 81.0
text = "Salud: "

[node name="ShopMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
